<resources>
    <string name="app_name">玩Android</string>
    <string name="title_activity_login1">Sign in</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="re_password">请再次输入你的密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="search">搜索</string>
    <string name="notice_sreach">搜索关键词以空格形式隔开</string>
    <string name="toLogin">已有账号？快返回登录页面吧!</string>
    <string name="toRegister">还没有账号？快来注册一个吧</string>
    <string name="title_activity_login2222">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings related to login -->
    <!--<string name="prompt_email">Email</string>-->
    <!--<string name="prompt_password">Password (optional)</string>-->
    <!--<string name="action_sign_in">Sign in or register</string>-->
    <!--<string name="action_sign_in_short">Sign in</string>-->
    <!--<string name="error_invalid_email">This email address is invalid</string>-->
    <!--<string name="error_invalid_password">This password is too short</string>-->
    <!--<string name="error_incorrect_password">This password is incorrect</string>-->
    <!--<string name="error_field_required">This field is required</string>-->
    <!--<string name="permission_rationale">"Contacts permissions are needed for providing emailcompletions."</string>-->
</resources>
